objects/blng__BillingTreatment__c.object
<CustomObject>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Finance Book</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__FinanceBook__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>blng__FinanceBook__c.blng__PeriodType__c</field>
                <operation>equals</operation>
                <value>Accounting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Billing Treatments</relationshipLabel>
        <relationshipName>BillingFinanceBookBillingTreatments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__GLRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Billing Treatments</relationshipLabel>
        <relationshipName>BillingGLRuleBillingTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Billing Treatments</relationshipLabel>
        <relationshipName>BillingLegalEntityBillingTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <label>Billing Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__BillingRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Billing Treatments</relationshipLabel>
        <relationshipName>BillingTreatments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__CancellationInvoicePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Invoice Plan</label>
        <referenceTo>blng__InvoicePlan__c</referenceTo>
        <relationshipLabel>Billing Treatments (Cancellation Invoice Plan)</relationshipLabel>
        <relationshipName>Billing_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CancellationRule__c</fullName>
        <label>Cancellation Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CancellationRule</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoicePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Order Invoice Plan</label>
        <referenceTo>blng__InvoicePlan__c</referenceTo>
        <relationshipLabel>Billing Treatments</relationshipLabel>
        <relationshipName>BillingTreatmentsInvoicePlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Billing Treatment</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>